# lwpc

./: .gitignore  LICENSE  README.md  pyproject.toml
src/lwpc/: model.py  utils.py
tests/: test_model.py  test_projection.py  test_utils.py
